update about us team and photo background colors

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -19,10 +19,10 @@ const imageUrl = "https://media.istockphoto.com/id/1288129985/vector/missing-ima
               height: 120px;
        }
        .border-orange {
-              border: 6px solid #ff724f;
+              border: 6px solid #C84113 ;
        }
        .border-blue {
-               border: 6px solid #13294B;
+               border: 6px solid #ff724f;
        }
 
 </style>
@@ -62,97 +62,101 @@ const imageUrl = "https://media.istockphoto.com/id/1288129985/vector/missing-ima
 
 <SubSection id="team">
 
-<h2 class="text-center site-title">Meet the Team:</h2>
+<h2 class="text-center site-title">Meet the Community of Practice:</h2>
 <div style="height:10px"></div>
-<h3 style="font-size: 20px;" class="text-center"> <span style="color:#13294B;">Faculty</span> and <span style="color:#ff724f;">Student</span> Community of Practice </h3>
+<h3 style="font-size: 20px;" class="text-center"> Faculty </h3>
 <div style="height:50px"></div>
 <div style="width: 800px; margin: 0 auto;">
        <div>
               <ul style="padding-left: 90px;" class="list-unstyled d-flex flex-wrap text-center mb-1 ml-4">
                      <li class="me-5 text-center">
                             <a href="https://mechse.illinois.edu/people/profile/admal">
-                            <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=19308&s=300" />
+                            <img class="border-orange small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=19308&s=300" />
                             </a>
                             <h3 style="font-size:15px" class="mt-1">Nikhil Admal</h2>
                      </li>
                      <li class="me-5 text-center">
                             <a href="https://grainger.illinois.edu/about/directory/faculty/wlchang">
-                            <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=18679&s=300" />
+                            <img class="border-orange small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=18679&s=300" />
                             </a>
                             <h3 style="font-size:15px" class="mt-1">Wayne Chang</h2>
                      </li>
                      <li class="me-5 text-center">
                             <a href="https://grainger.illinois.edu/about/directory/faculty/tfg">
-                            <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=19205&s=300"/>
+                            <img class="border-orange small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=19205&s=300"/>
                             </a>
                             <h3 style="font-size:15px" class="mt-1">Tom Golecki</h2>
                      </li>
                      <li class="me-5 text-center">
                             <a href="https://mechse.illinois.edu/people/profile/kellie2">
-                            <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=19424&s=300"/>
+                            <img class="border-orange small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=19424&s=300"/>
                             </a>
                             <h3 style="font-size:15px" class="mt-1">Kellie Halloran</h2>
                      </li>
               </ul>
        </div>
        <div>
-              <ul style="padding-left: 90px;" class="list-unstyled d-flex flex-wrap text-center pt-3 mb-1">
-                     <li class="me-5 text-center">
-                            <img class="border-orange small-img rounded-circle" src="/about/mikaylahoyle.jpg" />
-                            <h3 style="font-size:15px" class="mt-1">Mikayla Hoyle</h2>
-                     </li>
+              <ul style="padding-left: 180px;" class="list-unstyled d-flex flex-wrap text-center pt-3 mb-1">
+
                      <li class="me-5 text-center">
                             <a href="https://matse.illinois.edu/people/profile/hutchs">
-                            <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=9442&s=300"/>
+                            <img class="border-orange small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=9442&s=300"/>
                             </a>
                             <h3 style="font-size:15px" class="mt-1">Shelby Hutchens</h2>
                      </li>
                      <li class="me-5 text-center">
                             <a href="https://grainger.illinois.edu/about/directory/faculty/mkersh">
-                            <img class="border-blue small-img rounded-circle" src="https://pbs.twimg.com/profile_images/1411517321743671375/iCIG4eiJ_400x400.jpg"/>
+                            <img class="border-orange small-img rounded-circle" src="https://pbs.twimg.com/profile_images/1411517321743671375/iCIG4eiJ_400x400.jpg"/>
                             </a>
                             <h3 style="font-size:15px" class="mt-1">Mariana Kersh</h2>
                      </li>
                      <li class="me-5 text-center">
                             <a href="https://grainger.illinois.edu/about/directory/faculty/cluetke">
-                            <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=16811&s=300" />
+                            <img class="border-orange small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=16811&s=300" />
                             </a>
                             <h3 style="font-size:15px" class="mt-1">Callan Luetkemeyer</h2>
                      </li>
               </ul>
        </div>
        <div>
-              <ul style="padding-left: 90px;" class="list-unstyled d-flex flex-wrap text-center pt-3 mb-4">
+              <ul style="padding-left: 180px;" class="list-unstyled d-flex flex-wrap text-center pt-3 mb-4">
                      <li class="me-5 text-center">
                             <a href="https://mechse.illinois.edu/people/profile/bmercer">
-                            <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=10408&s=300" />
+                            <img class="border-orange small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=10408&s=300" />
                             </a>
                             <h3 style="font-size:15px" class="mt-1">Brian Mercer</h2>
                      </li>
-                     <li class="me-3 text-center">
-                            <img class="border-orange small-img rounded-circle" src="https://media.licdn.com/dms/image/v2/D5603AQHSEf1dkNk89w/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1697822928321?e=2147483647&v=beta&t=5aWEiU1vfH8fAh6BR5p7Dmjgwa6NQy-oEnmKM2EfsBg"/>
-                            <h3 style="font-size:15px" class="mt-1">Melany Opolz</h2>
-                     </li>
-                     <li style="margin-right:35px; class="me-4 text-center">
-                            <img class="border-orange small-img rounded-circle" src="https://media.licdn.com/dms/image/v2/D4E03AQE0HKOw_e393w/profile-displayphoto-shrink_800_800/B4EZYN_fHqG0Ac-/0/1743991468884?e=1755734400&v=beta&t=7n2MT-YXxstkSmEhSCN2stHGflOqz6ZCWNYSKkv0s6Q" />
-                            <h3 style="font-size:15px" class="mt-1">Chris Raymond-Bertrand</h2>
-                     </li>
+                  <li class="me-5 text-center">
+                      <a href="https://grainger.illinois.edu/about/directory/faculty/wandke2">
+                          <img class="border-orange small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=19440&s=300" />
+                      </a>
+                      <h3 style="font-size:15px" class="mt-1">Kevin Wandke</h2>
+                  </li>
                      <li class="me-5 text-center">
                             <a href="https://grainger.illinois.edu/about/directory/faculty/mwest">
-                            <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=16813&s=300" />
+                            <img class="border-orange small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=16813&s=300" />
                             </a>
                             <h3 style="font-size:15px" class="mt-1">Matt West</h2>
                      </li>
+
               </ul>
        </div>
+    <h3 style="font-size: 20px;" class="text-center"> Students</h3>
        <div>
-              <ul style="padding-left: 340px;" class="list-unstyled d-flex flex-wrap text-center pt-3 mb-4">
-                     <li class="me-5 text-center">
-                            <a href="href="https://grainger.illinois.edu/about/directory/faculty/wandke2">
-                            <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=19440&s=300" />
-                            </a>
-                            <h3 style="font-size:15px" class="mt-1">Kevin Wandke</h2>
-                     </li>
+              <ul style="padding-left: 180px;" class="list-unstyled d-flex flex-wrap text-center pt-3 mb-4">
+
+                  <li class="me-5 text-center">
+                      <img class="border-orange small-img rounded-circle" src="/about/mikaylahoyle.jpg" />
+                      <h2 style="font-size:15px" class="mt-1">Mikayla Hoyle</h2>
+                  </li>
+                  <li class="me-3 text-center">
+                      <img class="border-orange small-img rounded-circle" src="https://media.licdn.com/dms/image/v2/D5603AQHSEf1dkNk89w/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1697822928321?e=2147483647&v=beta&t=5aWEiU1vfH8fAh6BR5p7Dmjgwa6NQy-oEnmKM2EfsBg"/>
+                      <h3 style="font-size:15px" class="mt-1">Melany Opolz</h2>
+                  </li>
+                  <li  class="me-5 text-center">
+                      <img class="border-orange small-img rounded-circle" src="https://media.licdn.com/dms/image/v2/D4E03AQE0HKOw_e393w/profile-displayphoto-shrink_800_800/B4EZYN_fHqG0Ac-/0/1743991468884?e=1755734400&v=beta&t=7n2MT-YXxstkSmEhSCN2stHGflOqz6ZCWNYSKkv0s6Q"/>
+                      <h3 style="font-size:15px" class="mt-1">Chris Raymond-Bertrand</h2>
+                  </li>
               </ul>
        </div>
 <div>
