--- a/src/pages/md.astro
+++ b/src/pages/md.astro
@@ -153,7 +153,7 @@ import "../../public/static/css/course_home_pages.css"
             <ul class="list-unstyled d-flex flex-wrap text-center mb-1 ml-4">
                     <li class="me-5 text-center">
                             <a href="https://grainger.illinois.edu/about/directory/faculty/wandke2">
-                            <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=19440&s=300" />
+                            <img class="border-orange small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=19440&s=300" />
                             </a>
                             <h3 style="font-size:15px" class="mt-1">Kevin Wandke</h2>
                      </li>
@@ -183,7 +183,7 @@ import "../../public/static/css/course_home_pages.css"
             height: 120px;
       }
       .border-orange {
-            border: 6px solid #ff724f;
+            border: 6px solid #C84113;
       }
       .border-blue {
             border: 6px solid #13294B;
