--- a/src/pages/thermodynamics.astro
+++ b/src/pages/thermodynamics.astro
@@ -220,7 +220,7 @@ import "../../public/static/css/course_home_pages.css"
       <ul class="list-unstyled d-flex flex-wrap text-center mb-1 ml-4">
               <li class="me-5 text-center">
                             <a href="https://matse.illinois.edu/people/profile/hutchs">
-                            <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=9442&s=300"/>
+                            <img class="border-orange small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=9442&s=300"/>
                             </a>
                             <h2 style="font-size:20px" class="site-title mt-2">Shelby Hutchens</h2>
               </li>
@@ -248,7 +248,7 @@ import "../../public/static/css/course_home_pages.css"
             height: 120px;
       }
       .border-orange {
-            border: 6px solid #ff724f;
+            border: 6px solid #C84113;
       }
       .border-blue {
             border: 6px solid #13294B;
