--- a/src/pages/sta.astro
+++ b/src/pages/sta.astro
@@ -17,7 +17,7 @@ import "../../public/static/css/course_home_pages.css"
               height: 120px;
        }
        .border-orange {
-              border: 6px solid #ff724f;
+              border: 6px solid #C84113;
        }
        .border-blue {
 
@@ -59,13 +59,13 @@ import "../../public/static/css/course_home_pages.css"
       <ul class="list-unstyled d-flex flex-wrap text-center mb-1 ml-4">
               <li class="me-4 text-center">
                     <a href="https://mechse.illinois.edu/people/profile/kellie2">
-                    <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=19424&s=300" />
+                    <img class="border-orange small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=19424&s=300" />
                     </a>
                     <h2 style="font-size:20px" class="site-title mt-2">Kellie Halloran</h2>
               </li>
               <li class="me-5 text-center">
                     <a href="https://grainger.illinois.edu/about/directory/faculty/mwest">
-                    <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=16813&s=300" />
+                    <img class="border-orange small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=16813&s=300" />
                     </a>
                     <h2 style="font-size:20px" class="site-title mt-2">Matt West</h2>
               </li>
