--- a/src/pages/sol/axial_loading.astro
+++ b/src/pages/sol/axial_loading.astro
@@ -185,7 +185,7 @@ All internal forces can be obtained from equilibrium analysis only
 <CalloutContainer slot="cards">
         <CalloutCard title="Heads up!">
             <p>
-               <strong> Stress concentration factors </strong> build on this content in engineering materials and mechanical design.
+               <strong> Stress concentration factors </strong> build on this content in engineering materials and <a href = "https://www.mechref.org/mf/Stress_Concentrations/?searched=true&query=stress%20concen&origin=search"> machine failure</a>.
               </p>
 		<Image src='/sol/axial_loading/Stress_concentration.png' width='5'>  
 		    Stress concentraions
@@ -201,10 +201,6 @@ All internal forces can be obtained from equilibrium analysis only
 		</ul>
 
               </p>
-
-        <p>
-            Click <a href = "https://www.mechref.org/mf/Stress_Concentrations/?searched=true&query=stress%20concen&origin=search"> here </a> to find more information on stress concentrations.
-        </p>
         </CalloutCard>
  </CalloutContainer>
 
