--- a/src/pages/sta.astro
+++ b/src/pages/sta.astro
@@ -64,6 +64,12 @@ import "../../public/static/css/course_home_pages.css"
                     <h2 style="font-size:20px" class="site-title mt-2">Kellie Halloran</h2>
               </li>
               <li class="me-5 text-center">
+                    <a href="https://mechse.illinois.edu/people/profile/admal">
+                    <img class="border-orange small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=19308&s=300" />
+                    </a>
+                    <h2 style="font-size:20px" class="site-title mt-2">Nikhil Admal</h2>
+              </li>
+              <li class="me-5 text-center">
                     <a href="https://grainger.illinois.edu/about/directory/faculty/mwest">
                     <img class="border-orange small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=16813&s=300" />
                     </a>
