--- a/src/pages/sol.astro
+++ b/src/pages/sol.astro
@@ -29,7 +29,7 @@ import "../../public/static/css/course_home_pages.css"
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sol/stress#allowable_strength_design'>Allowable Strength Design</a></li> 
         </ul>
       </CourseCard>
-      <CourseCard href="/sol/strain" img_src="/sol/strain/extensometer.jpg" title="Strain">
+      <CourseCard href="/sol/strain" img_src="/sol/home_page/strain.png" title="Strain">
         <ul class='list-group list-group-flush py-0'> 
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sol/strain#units'>Units</a></li>
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sol/strain#normal_strain'>Normal Strain</a>
