create sample design page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -189,11 +189,18 @@ div.grid{
                         <p>Machine failure</p>
                     </a>
                 </div>
+                <div class="main-cards">
+                    <a href="/design">
+                        <!--<img src="/" style="background-color: white" alt="Machine Failure Logo" />-->
+                        <p>Design</p>
+                    </a>
+                </div>
             </div>
         
             <ul class="mt-0 card-grid-simple">
                 <li><a href="/md">Mechanism design</a></li>
                 <li><a href="/mf">Machine failure</a></li>
+                <li><a href="/design">Design</a></li>
             </ul>
         </div>
     </div>
