--- a/src/pages/design/designhome.astro
+++ b/src/pages/design/designhome.astro
@@ -8,10 +8,10 @@ import "../../../../public/static/css/course_home_pages.css"
 //import "../../public/static/css/course_home_pages.css"
 ---
 
-<Layout title="Course name">
+<Layout title="Design for X">
     <!-- Change the above and below to your couse name-->
   <h1>
-    <strong>Course name</strong>
+    <strong>Design for X</strong>
   </h1>
   <section class="mt-sm-4 mt-2">
     <ol>
