--- a/src/pages/design/designhome.astro
+++ b/src/pages/design/designhome.astro
@@ -1,11 +1,8 @@
 ---
-import Layout from "../../../layouts/CourseMenuLayout.astro"
-import "../../../../public/static/css/course_home_pages.css"
-
 //WHEN THE PAGE IS MOVED TO ITS PROPER PLACE, i.e. /SRC/PAGES, 
 //REMOVE THE TWO LINES ABOVE, AND UNCOMMENT THE LINES BELOW
-//import Layout from "../layouts/Layout.astro"
-//import "../../public/static/css/course_home_pages.css"
+import Layout from "../layouts/Layout.astro"
+import "../../public/static/css/course_home_pages.css"
 ---
 
 <Layout title="Design for X">
