--- a/src/pages/design.astro
+++ b/src/pages/design.astro
@@ -49,10 +49,10 @@ import "../../public/static/css/course_home_pages.css"
   <div>
       <ul class="list-unstyled d-flex flex-wrap text-center mb-1 ml-4">
               <li class="me-5 text-center">
-                    <a href="https://grainger.illinois.edu/about/directory/faculty/mwest">
-                    <img class="border-orange small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=16813&s=300" />
+                    <a href="https://grainger.illinois.edu/about/directory/faculty/lmclemon">
+                    <img class="border-orange small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=18972&s=300" />
                     </a>
-                    <h2 style="font-size:20px" class="site-title mt-2">Matt West</h2>
+                    <h2 style="font-size:20px" class="site-title mt-2">Lee Clemon</h2>
               </li>
       </ul>
   </div>
