modified:   src/pages/design.astro 	modified:   src/pages/design/designhome.astro

--- a/src/pages/design.astro
+++ b/src/pages/design.astro
@@ -36,9 +36,9 @@ import "../../public/static/css/course_home_pages.css"
 
   <section class="mt-sm-4 mt-2">
     <ol>
-      <li><a href="/ec1/p1?origin=coursemenu">Page 1</a></li>
-      <li><a href="/ec1/p2?origin=coursemenu">Page 2</a></li>
-      <li><a href="/ec1/p3?origin=coursemenu">Page 3</a></li>
+      <li><a href="/design/designhome?origin=coursemenu">Page 1</a></li>
+      <li><a href="/design/p2?origin=coursemenu">Page 2</a></li>
+      <li><a href="/design/p3?origin=coursemenu">Page 3</a></li>
     </ol>
   </section>
   <div style="height:40px"></div>
