--- a/src/pages/design/designhome.astro
+++ b/src/pages/design/designhome.astro
@@ -1,8 +1,20 @@
 ---
 //WHEN THE PAGE IS MOVED TO ITS PROPER PLACE, i.e. /SRC/PAGES, 
 //REMOVE THE TWO LINES ABOVE, AND UNCOMMENT THE LINES BELOW
-import Layout from "../layouts/Layout.astro"
-import "../../public/static/css/course_home_pages.css"
+import Layout from "../../layouts/Layout.astro";
+import Section from "../../components/Section.astro";
+import SubSection from "../../components/SubSection.astro";
+import SubSubSection from "../../components/SubSubSection.astro";
+import SubSubSubSection from "../../components/SubSubSubSection.astro";
+import CalloutContainer from "../../components/CalloutContainer.astro";
+import CalloutCard from "../../components/CalloutCard.astro";
+import InlineEquation from "../../components/InlineEquation.astro";
+import DisplayEquation from "../../components/DisplayEquation.astro";
+import Image from "../../components/Image.astro"
+import DisplayTable from "../../components/DisplayTable.astro";
+import Warning from "../../components/Warning.astro";
+import InlineCanvas from "../../components/InlineCanvas.astro";
+
 ---
 
 <Layout title="Design for X">
