Update torsion.astro; clarify the "sign convention" figure to note that this convention is for internal torque in a shaft

--- a/src/pages/sol/torsion.astro
+++ b/src/pages/sol/torsion.astro
@@ -56,7 +56,7 @@ Force X distance [lb-in or N-m]
 
 <SubSection title="Notation and Convention" id="notation_and_convention">
 
-<Image src="/sol/torsion/Convention.png" width="5">  Sign convention </Image>
+<Image src="/sol/torsion/Convention.png" width="5">  Sign convention for internal toruqe in a shaft </Image>
 
  <Itemize>
      <Item><InlineEquation equation="\\phi > 0" /> : counter clockwise </Item>
