machine failure and authorship changes

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -71,7 +71,7 @@ const imageUrl = "https://media.istockphoto.com/id/1288129985/vector/missing-ima
               <ul style="padding-left: 90px;" class="list-unstyled d-flex flex-wrap text-center mb-1 ml-4">
                      <li class="me-5 text-center">
                             <a href="https://mechse.illinois.edu/people/profile/admal">
-                            <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=19308&s=300" />
+                            <img class="border-blue small-img rounded-circle" src="/public/about/nikhiladmal.jpeg" />
                             </a>
                             <h3 style="font-size:15px" class="mt-1">Nikhil Admal</h2>
                      </li>
@@ -83,7 +83,7 @@ const imageUrl = "https://media.istockphoto.com/id/1288129985/vector/missing-ima
                      </li>
                      <li class="me-5 text-center">
                             <a href="https://grainger.illinois.edu/about/directory/faculty/tfg">
-                            <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=19205&s=300"/>
+                            <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=19205&s=300" />
                             </a>
                             <h3 style="font-size:15px" class="mt-1">Tom Golecki</h2>
                      </li>
@@ -115,7 +115,7 @@ const imageUrl = "https://media.istockphoto.com/id/1288129985/vector/missing-ima
                      </li>
                      <li class="me-5 text-center">
                             <a href="https://grainger.illinois.edu/about/directory/faculty/cluetke">
-                            <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=16811&s=300" />
+                            <img class="border-blue small-img rounded-circle" src="/public/about/callan.jpeg" />
                             </a>
                             <h3 style="font-size:15px" class="mt-1">Callan Luetkemeyer</h2>
                      </li>
