--- a/src/pages/mf.astro
+++ b/src/pages/mf.astro
@@ -77,5 +77,49 @@ import "../../public/static/css/course_home_pages.css"
             </div>
         </div>
 
+        <div style="height:40px"></div>
+  <h2 class="site-title">Faculty Authors:</h2>
+  <div style="height:10px"></div>
+
+  <div>
+      <ul class="list-unstyled d-flex flex-wrap text-center mb-1 ml-4">
+              <li class="me-5 text-center">
+                    <a href="https://grainger.illinois.edu/about/directory/faculty/wandke2">
+                    <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=19440&s=300" />
+                    </a>
+                    <h2 style="font-size:20px" class="site-title mt-2">Kevin Wandke</h2>
+              </li>
+      </ul>
+        </div>
+        <div style="height:20px"></div>
+
+        <div>
+            <h2 style="font-size:25px" class="site-title"> Student Authors: </h2>
+            <ul>
+            <li> <h2 style="font-size:20px;" class="site-title">Kyle Slavin</h2> </li>
+            </ul>
+        </div>
+
+        <div style="height:20px"></div>
+
     </Layout>
+
+    <style>
+      h2 {
+            font-weight: 700;
+            letter-spacing: -0.7px;
+      }
+      .small-img {
+            width: 120px;
+            height: 120px;
+      }
+      .border-orange {
+            border: 6px solid #ff724f;
+      }
+      .border-blue {
+
+            border: 6px solid #13294B;
+
+      }
+</style>
     
