Update stress.astro: when spelled out, the SI unit Pa should be "pascal" in lower case; this commit implements this change.

--- a/src/pages/sol/stress.astro
+++ b/src/pages/sol/stress.astro
@@ -72,7 +72,7 @@ The units of stress can be found in the table below.
         </tr>
         <tr>
             <td>Stress</td>
-            <td>Pascal = [\(\rm Pa\)] = [\(\rm N/m^2\)]</td>
+            <td>pascal = [\(\rm Pa\)] = [\(\rm N/m^2\)]</td>
             <td>pound per square inch = [\(\rm psi\)] = [\(\rm lb/in^2\)]</td>
         </tr>
     </tbody>
@@ -83,15 +83,15 @@ The units of stress can be found in the table below.
  <table class="table table-responsive table-bordered table-sm">
     <tbody>
         <tr>
-            <td>kiloPascal [\(\rm kPa\)]</td>
+            <td>kilopascal [\(\rm kPa\)]</td>
             <td>\(10^3\) [\(\rm Pa\)]</td>
         </tr>
         <tr>
-            <td>megaPascal [\(\rm MPa\)]</td>
+            <td>megapascal [\(\rm MPa\)]</td>
             <td>\(10^6\) [\(\rm Pa\)]</td>
         </tr>
         <tr>
-            <td>gigaPascal [\(\rm GPa\)]</td>
+            <td>gigapascal [\(\rm GPa\)]</td>
             <td>\(10^9\) [\(\rm Pa\)]</td>
         </tr>
     </tbody>
