--- a/src/pages/dyn/shortest_flight_paths.astro
+++ b/src/pages/dyn/shortest_flight_paths.astro
@@ -22,7 +22,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 import InlineCanvas from "../../components/InlineCanvas.astro"
 ---
 
-<Layout title = "Shortest flight paths" description = "Understand the ways to describe vectors, which have magnitude and direction, and scalars, which only have magnitude.">
+<Layout title = "Shortest flight paths" description = "placeholder">
 
 <div slot="navtree">
   <ul class='list-group list-group-flush py-0'> 
