Rearranged stress transformation and pressure vessels pages

--- a/src/pages/sol/stress_transformation.astro
+++ b/src/pages/sol/stress_transformation.astro
@@ -121,7 +121,6 @@ The general state of stress at a point is characterized by three independent nor
 
   <Image src="/sol/stress_transformation/Coord Transformation.png" width="6"></Image>
 
-
 <p>
  We think of stresses acting on faces, so we often associate the state of stress with a coordinate system. However, the selection of a coordinate system is arbitrary (materials don't know about coordinates - it's a mathematical construct!) and we could choose to express the stress state acting on any set of faces aligned with <strong>any</strong> coordinate system axes. Furthermore, we can relate the states of stress in each coordinate system to one another through <strong>stress transformation equations.</strong>
 </p>
@@ -166,7 +165,130 @@ Normal and shear stresses can be shown graphically as a function of <InlineEquat
 
 </SubSubSection>
 
-    
+<SubSubSection title="Principal Stresses" id="principal-stresses">
+
+  <Image src="/sol/stress_transformation/principalStressesElement.png" width="3"> </Image>
+
+
+<InlineEquation equation="\\sigma_{x}'" /> can be maximized to find the principal stresses. 
+
+<DisplayEquation equation="\\begin{align} \\rm\\tan(2\\theta_{p1}) = \\frac{2\\tau_{xy}}{\\sigma_x - \\sigma_y} \\\\ \\theta_{p2} = \\theta_{p1} + 90^o \\end{align}" title="Angle for maximum normal stress." background="True" derivation="True" id="prn-str">
+
+  Recall. 
+
+<DisplayEquation equation="\\sigma_x' = \\frac{\\sigma_x + \\sigma_y}{2} + \\frac{\\sigma_x - \\sigma_y}{2}\\rm\\cos(2\\theta) + \\tau_{xy}\\sin(2\\theta)\\" />
+
+ To maximize an equation, we take the derivative and set it equal to zero.
+
+<DisplayEquation equation="\\frac{d\\sigma_{x}'}{d\\theta} = -2\\rm\\sin(2\\theta)[\\frac{\\sigma_x-\\sigma_y}{2}] + 2\\rm\\cos(2\\theta)\\tau_{xy} = 0 \\" />
+
+<DisplayEquation equation="(\\sigma_x - \\sigma_y)\\rm\\sin(2\\theta) = 2\\tau_{xy}\\rm\\cos(2\\theta)\\" />
+
+<DisplayEquation equation="\\tan(2\\theta) = \\frac{2\\tau_{xy}}{\\sigma_x - \\sigma_y}\\" />
+
+  </DisplayEquation>
+ 
+ The maximum/minimum normal stress values (the principal stresses) are associated with <InlineEquation equation="\\theta_{p1}" /> and <InlineEquation equation="\\theta_{p2}" />.
+
+<DisplayEquation equation="\\sigma_{1,2} = \\frac{\\sigma_x +\\sigma_y}{2} \\pm \\sqrt{(\\frac{\\sigma_x - \\sigma_y}{2})^2 + \\tau_{xy}^2}\\" title="Principal stresses" background="True"/>
+
+ We use the convention that <InlineEquation equation="\\sigma_1 > \\sigma_2" />.
+
+</SubSubSection>
+
+<SubSubSection title="Maximum Shear Stress" id="max-shear">
+
+  <Image src="/sol/stress_transformation/maxShearStressState.png" width="2"></Image>
+
+ The orientations for the principal stress element and max shear stress element are <InlineEquation equation="45^o" /> apart.
+
+<InlineEquation equation="\\tau_{x'y'}" /> can also be maximized. 
+
+
+
+<DisplayEquation equation="\\begin{align} \\tan(2\\theta_{s1}) = \\frac{-(\\sigma_x - \\sigma_y)}{2\\tau_{xy}} \\\\ \\theta_{s2} = \\theta_{s1} + 90^o \\end{align}" title="Angle for maximum shear stress." background="True" derivation="True" id="max-shr">
+
+  Recall.
+
+<DisplayEquation equation="\\tau_{x'y'} = -\\frac{\\sigma_x - \\sigma_y}{2}\\rm\\sin(2\\theta) + \\tau_{xy}\\cos(2\\theta)\\" />
+
+ To maximize an equation, take the derivative and set it equal to zero.
+
+<DisplayEquation equation="\\frac{d\\tau_{x'y'}}{d\\theta} = -\\frac{\\sigma_x - \\sigma_y}{2}2\\rm\\cos(2\\theta) - \\tau_{xy}2\\rm\\sin(2\\theta) = 0\\" />
+<DisplayEquation equation="-2\\tau_{xy}\\rm\\sin(2\\theta)  = (\\sigma_x - \\sigma_y)\\rm\\cos(2\\theta)\\" />
+<DisplayEquation equation="\\tan(2\\theta) = \\frac{-(\\sigma_x - \\sigma_y)}{2\\tau_{xy}}\\" />
+
+  </DisplayEquation>
+
+ The maximum/minimum in plane shear stress values are associated with <InlineEquation equation="\\theta_{s1}" /> and <InlineEquation equation="\\theta_{s2}" />.
+
+<DisplayEquation equation="|\\tau_{max}| = \\sqrt{(\\frac{\\sigma_x - \\sigma_y}{2})^2 + \\tau_{xy}^2}\\" title="Maximum shear stress." background="True"/>
+
+ A maximum shear stress element has an average normal stress. 
+
+<DisplayEquation equation="\\sigma_{x}' = \\sigma_{y}' = \\sigma_{avg} = \\frac{\\sigma_x + \\sigma_y}{2}\\" title="Average normal stress." background="True"/>
+
+<Warning title="Unlike with the principal stress element, the normal stresses are not zero." remove_button="True" id="max-shr" />
+
+</SubSubSection>
+
+<SubSubSection title="Stresses on Inclined Planes" id="stress-inclined-plane">
+
+<DisplayEquation equation="\\begin{align} \\sigma_{x'} &= {\\bf n}\\cdot\\ {\\bf t}^{n}={\\bf n}\\cdot\\ {\\bf T}\\,{\\bf n} = \\sigma_{x} \\cos ^2(\\theta) + 2 \\,\\tau_{xy} \\sin(\\theta) \\cos(\\theta)+\\sigma_{y} \\sin ^2(\\theta) \\\\ \\tau_{x'y'} &= {\\bf s}\\cdot\\ {\\bf t}^{n}={\\bf s}\\cdot\\ {\\bf T}\\,{\\bf n} = (\\sigma_y - \\sigma_{x}) \\sin(\\theta) \\cos(\\theta) + \\tau_{xy} ( \\cos^2(\\theta) - \\sin^2(\\theta) )  \\end{align}" title="Stresses on inclined planes." background="True" derivation="True" id="str-inc">
+
+  Equilibrium equations.
+  <DisplayEquation equation="\\sum F_x: -\\sigma_x (A\\rm\\cos\\theta) - \\tau_{xy}(A\\rm\\sin\\theta) + (\\sigma_{x}'\\rm\\cos\\theta)A - (\\tau_{x'y'}\\rm\\sin\\theta)A=0\\" />
+  <DisplayEquation equation="\\sum F_y: -\\sigma_y (A\\rm\\sin\\theta) - \\tau_{xy}(A\\rm\\cos\\theta) + (\\sigma_{x}'\\rm\\sin\\theta)A - (\\tau_{x'y'}\\rm\\cos\\theta)A=0\\" />
+  
+   Rearrange terms.
+  
+  <DisplayEquation equation="A[\\sigma_{x}'\\rm\\cos\\theta - \\tau_{x'y'}\\rm\\sin\\theta] = A[\\sigma_{x}\\rm\\cos\\theta + \\tau_{xy}\\rm\\sin\\theta]\\" />
+  <DisplayEquation equation="A[\\sigma_{x}'\\rm\\sin\\theta - \\tau_{x'y'}\\rm\\cos\\theta] = A[\\sigma_{x}\\rm\\sin\\theta + \\tau_{xy}\\rm\\cos\\theta]\\" />
+  
+   Combine into a matrix.
+  
+  <DisplayEquation equation="\\begin{bmatrix} \\rm\\cos\\theta & -\\rm\\sin\\theta \\\\ \\rm\\sin\\theta & \\rm\\cos\\theta \\end{bmatrix} \\begin{bmatrix}\\sigma_{x}' \\\\ \\tau_{x'y'} \\end{bmatrix} = \\begin{bmatrix} \\sigma_{x}\\rm\\cos\\theta & \\tau_{xy}\\rm\\sin\\theta \\\\ \\sigma_{y}\\rm\\sin\\theta & \\tau_{xy}\\rm\\cos\\theta \\end{bmatrix}" />
+          
+   Multiply by the inverse.
+  
+  <DisplayEquation equation="\\begin{bmatrix} \\sigma_{x}' \\\\ \\tau_{x'y'} \\end{bmatrix} = \\begin{bmatrix} \\rm\\cos\\theta & \\rm\\sin\\theta \\\\ -\\rm\\sin\\theta & \\rm\\cos\\theta \\end{bmatrix} \\begin{bmatrix} \\sigma_{x}\\rm\\cos\\theta & \\tau_{xy}\\rm\\sin\\theta \\\\ \\sigma_{y}\\rm\\sin\\theta & \\tau_{xy}\\rm\\cos\\theta \\end{bmatrix}" />
+  
+
+  </DisplayEquation>
+
+</SubSubSection>
+
+<SubSubSection title="Pure Shear" id="pure-shear">
+
+
+ A circular shaft under torsion develops <strong>pure shear</strong> on cross-sections between longitudinal planes (the faces of element <InlineEquation equation="a" /> are parallel and perpendicular to the axis of the shaft).
+
+<Image src="/sol/stress_transformation/Circular Shaft Torsion.png" width="7"></Image>
+
+<DisplayEquation equation="\\begin{align} \\sigma_{x'} = 2\\tau_{max} \\sin\\theta \\cos\\theta = \\tau_{max} \\sin (2\\theta) \\\\ \\tau_{x'y'} = \\tau_{max}(\\cos^2\\theta - \\sin^2\\theta) = \\tau_{max} \\cos(2\\theta) \\end{align}" title="Torsion on inclined planes." background="True" derivation="True" id="tor-inc">
+
+  Recall projected forces.
+
+  <DisplayEquation equation=" \\begin{align} \\sigma_{x'} = \\frac{P}{A_o}(\\cos^2(\\theta)) \\\\ \\tau_{x'y'} = -\\frac{P}{A_o}\\sin(\\theta)\\cos(\\theta) \\end{align} "/> 
+
+
+  <Image src="/sol/stress_transformation/Max Stress.png" width="6"></Image>
+
+ Maximum normal stress at 90 degrees.
+
+<DisplayEquation equation="\\begin{align} \\sigma_{x'} = \\tau_{max} = \\frac{Tc}{J} \\\\ \\sigma_{y'} = -\\tau_{max} = -\\frac{Tc}{J} \\\\ \\tau_{x'y'} = 0 \\end{align}" /> 
+
+ Maximum shear stress at 45 degrees.
+ <DisplayEquation equation="\\begin{align} \\sigma_{x'} = 0 \\\\ \\sigma_{y'} = 0 \\\\ \\tau_{x'y'} = \\tau_{max} = \\frac{Tc}{J} \\end{align}" /> 
+
+
+</DisplayEquation>
+
+</SubSubSection>
+
+<Section title="Mohr's Circle" id="mohr">
+</Section>
+
   <SubSubSection title="2-D Mohr's Circle" id="2d">
     Mohr's circle is a graphical representation of stress transformations. The equations for stress transformations actually describe a circle if we consider the normal stress <InlineEquation equation="\\sigma" /> to be the x-coordinate and the shear stress <InlineEquation equation="\\tau" /> to be the y-coordinate.
 
@@ -446,95 +568,7 @@ Normal and shear stresses can be shown graphically as a function of <InlineEquat
   </SubSubSection>
 
 
-<SubSubSection title="Stresses on Inclined Planes" id="stress-inclined-plane">
-
-<DisplayEquation equation="\\begin{align} \\sigma_{x'} &= {\\bf n}\\cdot\\ {\\bf t}^{n}={\\bf n}\\cdot\\ {\\bf T}\\,{\\bf n} = \\sigma_{x} \\cos ^2(\\theta) + 2 \\,\\tau_{xy} \\sin(\\theta) \\cos(\\theta)+\\sigma_{y} \\sin ^2(\\theta) \\\\ \\tau_{x'y'} &= {\\bf s}\\cdot\\ {\\bf t}^{n}={\\bf s}\\cdot\\ {\\bf T}\\,{\\bf n} = (\\sigma_y - \\sigma_{x}) \\sin(\\theta) \\cos(\\theta) + \\tau_{xy} ( \\cos^2(\\theta) - \\sin^2(\\theta) )  \\end{align}" title="Stresses on inclined planes." background="True" derivation="True" id="str-inc">
-
-  Equilibrium equations.
-  <DisplayEquation equation="\\sum F_x: -\\sigma_x (A\\rm\\cos\\theta) - \\tau_{xy}(A\\rm\\sin\\theta) + (\\sigma_{x}'\\rm\\cos\\theta)A - (\\tau_{x'y'}\\rm\\sin\\theta)A=0\\" />
-  <DisplayEquation equation="\\sum F_y: -\\sigma_y (A\\rm\\sin\\theta) - \\tau_{xy}(A\\rm\\cos\\theta) + (\\sigma_{x}'\\rm\\sin\\theta)A - (\\tau_{x'y'}\\rm\\cos\\theta)A=0\\" />
-  
-   Rearrange terms.
-  
-  <DisplayEquation equation="A[\\sigma_{x}'\\rm\\cos\\theta - \\tau_{x'y'}\\rm\\sin\\theta] = A[\\sigma_{x}\\rm\\cos\\theta + \\tau_{xy}\\rm\\sin\\theta]\\" />
-  <DisplayEquation equation="A[\\sigma_{x}'\\rm\\sin\\theta - \\tau_{x'y'}\\rm\\cos\\theta] = A[\\sigma_{x}\\rm\\sin\\theta + \\tau_{xy}\\rm\\cos\\theta]\\" />
-  
-   Combine into a matrix.
-  
-  <DisplayEquation equation="\\begin{bmatrix} \\rm\\cos\\theta & -\\rm\\sin\\theta \\\\ \\rm\\sin\\theta & \\rm\\cos\\theta \\end{bmatrix} \\begin{bmatrix}\\sigma_{x}' \\\\ \\tau_{x'y'} \\end{bmatrix} = \\begin{bmatrix} \\sigma_{x}\\rm\\cos\\theta & \\tau_{xy}\\rm\\sin\\theta \\\\ \\sigma_{y}\\rm\\sin\\theta & \\tau_{xy}\\rm\\cos\\theta \\end{bmatrix}" />
-          
-   Multiply by the inverse.
-  
-  <DisplayEquation equation="\\begin{bmatrix} \\sigma_{x}' \\\\ \\tau_{x'y'} \\end{bmatrix} = \\begin{bmatrix} \\rm\\cos\\theta & \\rm\\sin\\theta \\\\ -\\rm\\sin\\theta & \\rm\\cos\\theta \\end{bmatrix} \\begin{bmatrix} \\sigma_{x}\\rm\\cos\\theta & \\tau_{xy}\\rm\\sin\\theta \\\\ \\sigma_{y}\\rm\\sin\\theta & \\tau_{xy}\\rm\\cos\\theta \\end{bmatrix}" />
-  
-
-  </DisplayEquation>
-
-</SubSubSection>
-
-
-
-<SubSubSection title="Pure Shear" id="pure-shear">
-
-
- A circular shaft under torsion develops <strong>pure shear</strong> on cross-sections between longitudinal planes (the faces of element <InlineEquation equation="a" /> are parallel and perpendicular to the axis of the shaft).
-
-<Image src="/sol/stress_transformation/Circular Shaft Torsion.png" width="7"></Image>
-
-<DisplayEquation equation="\\begin{align} \\sigma_{x'} = 2\\tau_{max} \\sin\\theta \\cos\\theta = \\tau_{max} \\sin (2\\theta) \\\\ \\tau_{x'y'} = \\tau_{max}(\\cos^2\\theta - \\sin^2\\theta) = \\tau_{max} \\cos(2\\theta) \\end{align}" title="Torsion on inclined planes." background="True" derivation="True" id="tor-inc">
-
-  Recall projected forces.
-
-  <DisplayEquation equation=" \\begin{align} \\sigma_{x'} = \\frac{P}{A_o}(\\cos^2(\\theta)) \\\\ \\tau_{x'y'} = -\\frac{P}{A_o}\\sin(\\theta)\\cos(\\theta) \\end{align} "/> 
-
-
-  <Image src="/sol/stress_transformation/Max Stress.png" width="6"></Image>
-
- Maximum normal stress at 90 degrees.
-
-<DisplayEquation equation="\\begin{align} \\sigma_{x'} = \\tau_{max} = \\frac{Tc}{J} \\\\ \\sigma_{y'} = -\\tau_{max} = -\\frac{Tc}{J} \\\\ \\tau_{x'y'} = 0 \\end{align}" /> 
-
- Maximum shear stress at 45 degrees.
- <DisplayEquation equation="\\begin{align} \\sigma_{x'} = 0 \\\\ \\sigma_{y'} = 0 \\\\ \\tau_{x'y'} = \\tau_{max} = \\frac{Tc}{J} \\end{align}" /> 
-
-
-</DisplayEquation>
-
-</SubSubSection>
-
-<SubSection title="Principal Stresses" id="principal-stresses">
-
-  <Image src="/sol/stress_transformation/principalStressesElement.png" width="3"> </Image>
-
-
-<InlineEquation equation="\\sigma_{x}'" /> can be maximized to find the principal stresses. 
-
-<DisplayEquation equation="\\begin{align} \\rm\\tan(2\\theta_{p1}) = \\frac{2\\tau_{xy}}{\\sigma_x - \\sigma_y} \\\\ \\theta_{p2} = \\theta_{p1} + 90^o \\end{align}" title="Angle for maximum normal stress." background="True" derivation="True" id="prn-str">
-
-  Recall. 
-
-<DisplayEquation equation="\\sigma_x' = \\frac{\\sigma_x + \\sigma_y}{2} + \\frac{\\sigma_x - \\sigma_y}{2}\\rm\\cos(2\\theta) + \\tau_{xy}\\sin(2\\theta)\\" />
-
- To maximize an equation, we take the derivative and set it equal to zero.
-
-<DisplayEquation equation="\\frac{d\\sigma_{x}'}{d\\theta} = -2\\rm\\sin(2\\theta)[\\frac{\\sigma_x-\\sigma_y}{2}] + 2\\rm\\cos(2\\theta)\\tau_{xy} = 0 \\" />
-
-<DisplayEquation equation="(\\sigma_x - \\sigma_y)\\rm\\sin(2\\theta) = 2\\tau_{xy}\\rm\\cos(2\\theta)\\" />
-
-<DisplayEquation equation="\\tan(2\\theta) = \\frac{2\\tau_{xy}}{\\sigma_x - \\sigma_y}\\" />
-
-  </DisplayEquation>
- 
- The maximum/minimum normal stress values (the principal stresses) are associated with <InlineEquation equation="\\theta_{p1}" /> and <InlineEquation equation="\\theta_{p2}" />.
-
-<DisplayEquation equation="\\sigma_{1,2} = \\frac{\\sigma_x +\\sigma_y}{2} \\pm \\sqrt{(\\frac{\\sigma_x - \\sigma_y}{2})^2 + \\tau_{xy}^2}\\" title="Principal stresses" background="True"/>
-
- We use the convention that <InlineEquation equation="\\sigma_1 > \\sigma_2" />.
-
-
-</SubSection>
-
-<SubSubSection title="Alternative Approach: Eigenvalues" id="eigenvalues">
+<SubSection title="Alternative Approach: Eigenvalues" id="eigenvalues">
 The <strong>eigenvalues</strong> of the stress tensor are called the principal stresses, and the <strong>eigenvectors</strong> define the principal direction vectors.
 
 <p>
@@ -596,42 +630,6 @@ We can repeat this procedure for the second eigenvalue, <InlineEquation equation
 
 <DisplayEquation equation="\\theta_{p2} = \\tan^{-1}\\Bigl(\\frac{\\sigma_2 - \\sigma_x}{\\tau_{xy}}\\Bigr) = \\tan^{-1}\\Bigl(\\frac{\\tau_{xy}}{\\sigma_2 - \\sigma_y}\\Bigr)\\" title="Second eigenvector angle." background="True"/>
  
-</SubSubSection>
-
-<SubSection title="Maximum Shear Stress" id="max-shear">
-
-  <Image src="/sol/stress_transformation/maxShearStressState.png" width="2"></Image>
-
- The orientations for the principal stress element and max shear stress element are <InlineEquation equation="45^o" /> apart.
-
-<InlineEquation equation="\\tau_{x'y'}" /> can also be maximized. 
-
-
-
-<DisplayEquation equation="\\begin{align} \\tan(2\\theta_{s1}) = \\frac{-(\\sigma_x - \\sigma_y)}{2\\tau_{xy}} \\\\ \\theta_{s2} = \\theta_{s1} + 90^o \\end{align}" title="Angle for maximum shear stress." background="True" derivation="True" id="max-shr">
-
-  Recall.
-
-<DisplayEquation equation="\\tau_{x'y'} = -\\frac{\\sigma_x - \\sigma_y}{2}\\rm\\sin(2\\theta) + \\tau_{xy}\\cos(2\\theta)\\" />
-
- To maximize an equation, take the derivative and set it equal to zero.
-
-<DisplayEquation equation="\\frac{d\\tau_{x'y'}}{d\\theta} = -\\frac{\\sigma_x - \\sigma_y}{2}2\\rm\\cos(2\\theta) - \\tau_{xy}2\\rm\\sin(2\\theta) = 0\\" />
-<DisplayEquation equation="-2\\tau_{xy}\\rm\\sin(2\\theta)  = (\\sigma_x - \\sigma_y)\\rm\\cos(2\\theta)\\" />
-<DisplayEquation equation="\\tan(2\\theta) = \\frac{-(\\sigma_x - \\sigma_y)}{2\\tau_{xy}}\\" />
-
-  </DisplayEquation>
-
- The maximum/minimum in plane shear stress values are associated with <InlineEquation equation="\\theta_{s1}" /> and <InlineEquation equation="\\theta_{s2}" />.
-
-<DisplayEquation equation="|\\tau_{max}| = \\sqrt{(\\frac{\\sigma_x - \\sigma_y}{2})^2 + \\tau_{xy}^2}\\" title="Maximum shear stress." background="True"/>
-
- A maximum shear stress element has an average normal stress. 
-
-<DisplayEquation equation="\\sigma_{x}' = \\sigma_{y}' = \\sigma_{avg} = \\frac{\\sigma_x + \\sigma_y}{2}\\" title="Average normal stress." background="True"/>
-
-<Warning title="Unlike with the principal stress element, the normal stresses are not zero." remove_button="True" id="max-shr" />
-
 </SubSection>
 
 </Layout>
